fixed issues on test page

--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -11,7 +11,10 @@
 <body>
     <header>
         <nav>
-            "Header Content"
+            <a href="*">Home</a>
+            <a href="*">Info</a>
+            <a href="*">Gallery</a>
+            <a href="*">About Us</a>
         </nav>
     </header>
     <div class="left-side">Left Side</div>
