html error fixed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 - Dynamic Web Fundamentals - Collin J. Maassen</title>
-    <meta name="description" content="This is my WDD 131- Dynamic Web Fundamentals homepage. Written by Collin maassen, Describing information about himself and links to activities for the course."
+    <meta name="description" content="This is my WDD 131- Dynamic Web Fundamentals homepage. Written by Collin maassen, Describing information about himself and links to activities for the course.">
     <meta name="author" content="Collin Maassen">
     <link rel="stylesheet" href="styles/base.css">
     <link href="https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&family=Passion+One:wght@400;700;900&display=swap" rel="stylesheet">
