fixed google font errors

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta name="description" content="This is my WDD 131- Dynamic Web Fundamentals homepage. Written by Collin maassen, Describing information about himself and links to activities for the course.">
     <meta name="author" content="Collin Maassen">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crete+Round:ital@0;1&family=Passion+One:wght@400;700;900&display=swap" rel="stylesheet">
-    <script src="scripts/getdates.js"></script>
+    <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
     <header>
