got images encased in figures and fig captions for the caption.

--- a/temples.html
+++ b/temples.html
@@ -27,42 +27,42 @@
     </header>
     <main>
         <h2>Home</h2>
-        <div>        
+        <figure>
             <img src="images/san-diego.jpg" alt="San Diego, CA USA Temple">
-            <p>San Diego California USA</p>
-        </div>
-        <div>
+            <figcaption>San Diego California USA</figcaption>
+        </figure>
+        <figure>
             <img src="images/gilbert-arizona.jpg" alt="Gilbert, AZ USA Temple">
-            <p>Gilbert Arizona USA</p>
-        </div>
-        <div>
+            <figcaption>Gilbert Arizona USA</figcaption>
+        </figure>
+        <figure>
             <img src="images/nebraska.jpg" alt="Winter Quarters, NE USA Temple">
-            <p>Winter Quarters Nebraska USA</p>
-        </div>
-        <div>
+            <figcaption>Winter Quarters Nebraska USA</figcaption>
+        </figure>
+        <figure>
             <img src="images/kona-hawaii.jpg" alt="Kona, HI USA Temple">
-            <p>Kona Hawaii USA</p>
-        </div>
-        <div>
+            <figcaption>Kona Hawaii USA</figcaption>
+        </figure>
+        <figure>
             <img src="images/salt-lake.jpg" alt="Salt Lake City, UT Temple">
-            <p>Salt Lake City Utah USA</p>
-        </div>
-        <div>
+            <figcaption>Salt Lake City Utah USA</figcaption>
+        </figure>
+        <figure>
             <img src="images/toronto.jpg" alt="Toronto, ON Canada Temple">
-            <p>Toronto Ontario Canada</p>
-        </div>
-        <div>
+            <figcaption>Toronto Ontario Canada</figcaption>
+        </figure>
+        <figure>
             <img src="images/fukuoka-japan.jpg" alt="Fukuoka Japan Temple">
-            <p>Fukuoka Japan</p>
-        </div>
-        <div>
+            <figcaption>Fukuoka Japan</figcaption>
+        </figure>
+        <figure>
             <img src="images/snowflake.jpg" alt="Snowflake, AZ USA Temple">
-            <p>Snowflake Arizona USA</p>
-        </div>
-        <div>
+            <figcaption>Snowflake Arizona USA</figcaption>
+        </figure>
+        <figure>
             <img src="images/nauvoo.jpg" alt="Nauvoo, IL USA Temple">
-            <p>Nauvoo Illinois USA</p>
-        </div>
+            <figcaption>Nauvoo Illinois USA</figcaption>
+        </figure>
 
     </main>
     <footer>
