--- a/week03/responsive-image.html
+++ b/week03/responsive-image.html
@@ -14,7 +14,7 @@
             <picture>
                 <source media="(min-width: 1000px)" srcset="images/hero-large.webp">
                 <source media="(min-width: 500px)" srcset="images/hero-medium.webp">
-                <img src="images/hero-small.webp" alt="Provo City Center Temple" width="500px" height="250px">
+                <img src="images/hero-small.webp" alt="Provo City Center Temple" width="500" height="250">
             </picture>
         </div>
     </main>
