--- a/place.html
+++ b/place.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 131 - Dynamic Web Fundamentals - Collin Maassen - Week 03 Arizona</title>
+    <title>WDD 131 - Dynamic Web Fundamentals - Collin Maassen - Week 03 Place: Arizona</title>
     <meta name="description" content="This is my week 3 page project for WDD 131. This will demonstrate responsive images and and page features that have been learned up to this point.">
     <meta name="author" content="Collin Maassen">
     <link rel="stylesheet" href="styles/place.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital@0;1&family=Neuton:ital@0;1&family=Spectral&display=swap" rel="stylesheet">
-    <script src="scripts/getdates.js"></script>
+    <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
     <header>
@@ -36,23 +36,28 @@
                 <tr>
                     <td>Population: </td>
                     <td class="info">7.431 million</td>
-                </tr>                <tr>
+                </tr>                
+                <tr>
                     <td>Capitol: </td>
                     <td class="info">Phoenix</td>
-                </tr>                <tr>
+                </tr>                
+                <tr>
                     <td>Languages: </td>
                     <td class="info">English, Spanish</td>
-                </tr>                <tr>
+                </tr>                
+                <tr>
                     <td>Currency: </td>
                     <td class="info">US Dollar</td>
-                </tr>                <tr>
+                </tr>                
+                <tr>
                     <td>Time Zone: </td>
                     <td class="info">Arizona, Currently UTC-7:00</td>
                 </tr>                
                 <tr>
                     <td>Calling Code: </td>
                     <td class="info">+1</td>
-                </tr>                <tr>
+                </tr>                
+                <tr>
                     <td>Internet TLD: </td>
                     <td class="info">.us</td>
                 </tr>
