--- a/week04/lazyload.html
+++ b/week04/lazyload.html
@@ -6,7 +6,7 @@
     <title>WDD 131 | Week 04 Practice | Collin Maassen</title>
     <meta name="description" content="This is a practice page for course wdd 131 week 04 ">
     <meta name="author" content="Collin Maassen">
-    <script src="scripts/getdates.js" defer></script>
+    <script src="styles/lazyload.css" defer></script>
     <link rel="stylesheet" href="styles/lazyload.css">
 </head>
 <body>
@@ -14,12 +14,24 @@
         <h1>Lazy Load Practice</h1>
     </header>
     <main>
-        <img src="images/puppy.webp" alt="Picture of a small dog">
-        <img src="images/squirrel.webp" alt=" Picture of a squirrel with red tufts of hair on the tips of its ears">
-        <img src="images/ball.webp" alt="A dog with a ball in it's mouth running">
-        <img src="images/squirrel.webp" alt="The same squirrel from before with red tufts of hair on the tips of its ears">
-        <img src="images/kitty.webp" alt="Picture of an orange cat laying on it's side">
-        <img src="images/puppy.webp" alt="Picture of a small dog">
+        <picture>
+            <img src="images/puppy.webp" alt="Picture of a small dog" loading="lazy" width="400" height="600">
+        </picture>
+        <picture>
+            <img src="images/squirrel.webp" alt=" Picture of a squirrel with red tufts of hair on the tips of its ears"loading="lazy" width="400" height="600">
+        </picture>
+        <picture>
+            <img src="images/ball.webp" alt="A dog with a ball in it's mouth running" loading="lazy" width="400" height="600">
+        </picture>
+        <picture>
+            <img src="images/squirrel.webp" alt="The same squirrel from before with red tufts of hair on the tips of its ears" loading="lazy" width="400" height="600" >
+        </picture>
+        <picture>
+            <img src="images/kitty.webp" alt="Picture of an orange cat laying on it's side" loading="lazy" width="400" height="600">
+        </picture>
+        <picture>
+            <img src="images/puppy.webp" alt="Picture of a small dog" loading="lazy" width="400" height="600">
+        </picture>
     </main>
     <footer>
         <p>© <span id="currentyear"></span> ♌ Collin Maassen ☯ USA, Arizona</p>
