--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 131 - Collin Maassen - Temple Gallery</title>
-    <meta name="description" content="This is a responsive webpage that was built by Collin Maassen which displays pictures of LDS Temples. This is an assignment for week 02 of Wdd 131.">
+    <title>WDD 131 - Collin Maassen - Filtered Temple Gallery</title>
+    <meta name="description" content="This is a responsive webpage that was built by Collin Maassen which displays pictures of LDS Temples. This is an assignment for week 04 of Wdd 131.">
     <meta name="author" content="Collin Maassen">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&family=Spectral:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/temples.css">
-    <link rel="stylesheet" href="styles/temples-large.css">
+    <link rel="stylesheet" href="styles/filtered-temples.css">
+    <link rel="stylesheet" href="styles/filtered-temples-large.css">
     <script src="scripts/filtered-temples.js" defer></script>
     <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
     <header>
         <h1>Temple Album</h1>
-        <nav>
-            <a href="filtered-temples.html">Home</a>
+        <nav id="nav-menu">
+            <a href="#">Home</a>
             <a href="#">Old</a>
             <a href="#">New</a>
             <a href="#">Large</a>
@@ -27,89 +27,6 @@
     </header>
     <main>
         <h2>Home</h2>
-        const temples = [
-            {
-                templeName: "Aba Nigeria",
-                location: "Aba, Nigeria",
-                dedicated: "2005, August, 7",
-                area: 11500,
-                imageUrl:
-                "https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/400x250/aba-nigeria-temple-lds-273999-wallpaper.jpg"
-            },
-            {
-                templeName: "Manti Utah",
-                location: "Manti, Utah, United States",
-                dedicated: "1888, May, 21",
-                area: 74792,
-                imageUrl:
-                "https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manti-utah/400x250/manti-temple-768192-wallpaper.jpg"
-            },
-            {
-                templeName: "Payson Utah",
-                location: "Payson, Utah, United States",
-                dedicated: "2015, June, 7",
-                area: 96630,
-                imageUrl:
-                "https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/payson-utah/400x225/payson-utah-temple-exterior-1416671-wallpaper.jpg"
-            },
-            {
-                templeName: "Yigo Guam",
-                location: "Yigo, Guam",
-                dedicated: "2020, May, 2",
-                area: 6861,
-                imageUrl:
-                "https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/yigo-guam/400x250/yigo_guam_temple_2.jpg"
-            },
-            {
-                templeName: "Washington D.C.",
-                location: "Kensington, Maryland, United States",
-                dedicated: "1974, November, 19",
-                area: 156558,
-                imageUrl:
-                "https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/washington-dc/400x250/washington_dc_temple-exterior-2.jpeg"
-            },
-            {
-                templeName: "Lima Perú",
-                location: "Lima, Perú",
-                dedicated: "1986, January, 10",
-                area: 9600,
-                imageUrl:
-                "https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/lima-peru/400x250/lima-peru-temple-evening-1075606-wallpaper.jpg"
-            },
-            {
-                templeName: "Mexico City Mexico",
-                location: "Mexico City, Mexico",
-                dedicated: "1983, December, 2",
-                area: 116642,
-                imageUrl:
-                "https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/mexico-city-mexico/400x250/mexico-city-temple-exterior-1518361-wallpaper.jpg"
-            },
-            {
-                templeName: "Fukuoka Japan Temple"
-                location: "Fukuoka-shi, Fukuoka, Japan"
-                dedicated: "2000, June, 11"
-                area: 10700
-                imageUrl: 
-                "https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/fukuoka-japan/400x250/fukuoka-japan-temple-lds-306863-wallpaper.jpg"
-            },
-            {
-                templeName: "Winter Quarters Nebraska Temple"
-                location: "Omaha, Nebraska, United States"
-                dedicated: "2001, April, 22"
-                area: 16000
-                imageUrl: 
-                "https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/winter-quarters-nebraska/400x250/winter-quarters-nebraska-temple-detail-772766.jpg"
-            },
-            {
-                templeName: "Toronto Ontario Temple"
-                location: "Brampton, Ontario, Canada"
-                dedicated: "1990, August, 26"
-                area: 57982
-                imageUrl: "https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/toronto-ontario/400x250/toronto-temple-lds-235671-wallpaper.jpg"
-            },
-        ];
-
-
     </main>
     <footer>
         <p>© <span id="currentyear"></span> ♌ Collin Maassen ☯ USA, Arizona</p>
