--- a/place.html
+++ b/place.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital@0;1&family=Neuton:ital@0;1&family=Spectral&display=swap" rel="stylesheet">
     <script src="scripts/getdates.js" defer></script>
+    <script src="scripts/place.js" defer></script>
 </head>
 <body>
     <header>
@@ -18,8 +19,8 @@
     </header>
     <main>
         <picture class="az-animal">
-            <source media="min-width: 1000px" srcset="images/ringtail-medium.webp">
             <source media="min-width: 1500px" srcset="images/ringtail-large.webp">
+            <source media="min-width: 1000px" srcset="images/ringtail-medium.webp">
             <img src="images/ringtail-mobile.webp" alt="Ringtails, Arizona's state mammal.">
         </picture>
         <table>
@@ -85,7 +86,7 @@
                 </tr>
                 <tr>
                     <td>Wind Chill: </td>
-                    <td class="info">76 ℉</td>
+                    <td class="info wind-chill">76 ℉</td>
                 </tr>
             </tbody>
         </table>
