update to svg image

--- a/place.html
+++ b/place.html
@@ -68,7 +68,7 @@
         <table>
             <thead>
                 <tr>
-                    <th colspan="2">Weather <br> <img src="images/cloudy.svg" alt="Cloudy Weather Icon"></th>
+                    <th colspan="2" class="weather-pic">Weather <img src="images/cloudy.svg" alt="Cloudy Weather Icon"></th>
                 </tr>
             </thead>
             <tbody>
