--- a/place.html
+++ b/place.html
@@ -19,6 +19,7 @@
     </header>
     <main>
         <picture class="az-animal">
+            <source media="(min-width: 625px)" srcset="images/ringtail-small-medium.webp">
             <img src="images/ringtail-mobile.webp" alt="Ringtails, Arizona's state mammal.">
         </picture>
         <table>
