site plan final

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -56,8 +56,13 @@
         </div>
         <div class="frame">
             <h3>Wire Frame</h3>
-            <img src="" alt="Image of the mobile version of the website plan">
-            <img src="" alt="Image of the large screen version of the website plan">
+            <h4>Mobile View</h4>
+            <img src="images/mobile-wireframe.webp" alt="Image of the mobile version of the website plan">
+            <h4>Desktop View</h4>
+            <picture class="desk-view">    
+                <source media="(min-width: 650px)" srcset="images/desktop-wireframe-large.webp">
+                <img src="images/desktop-wireframe.webp" alt="Image of the large screen version of the website plan">
+            </picture>
         </div>
     </main>
     <footer>
