--- a/week05/bom.html
+++ b/week05/bom.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BOM WDD 131 Practice | Week 05 | Collin Maassen</title>
+    <meta name="description" content="This is an updated page from week 02 practice of WDD 131 favorite Book of Mormon chapters">
+    <meta name="author" content="Collin Maassen">
     <link rel="stylesheet" href="styles/bom.css">
     <script src="scripts/bom.js" defer></script>
 </head>
