fixed it for real this time. Ehehe

--- a/review.html
+++ b/review.html
@@ -22,7 +22,7 @@
         <p>Total Reviews Posted: <span id="review-counter">0</span></p>
         <a href="https://cmaassen16.github.io/wdd131/form.html">Return To Review Form</a>
     </main>
-    <footer>
+    <footer class="review-foot">
         <p>© <span id="currentyear"></span> ♌ Collin Maassen ☯ USA, Arizona</p>
         <p><span id="lastModified"></span></p>
     </footer>
