--- a/project/the-diver.html
+++ b/project/the-diver.html
@@ -1,68 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Diver</title>
-    <meta name="description" content="This page is dedicated to a dear friend. This is a tribute and a token of thanks for being a mentor to me in my life. When all seems crazy and I feel lost I know that the Diver will be there to pull me out of the deep. Thank you for being a great friend Dallas!">
-    <meta name="author" content="Collin Maassen">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;1,400;1,500&family=Volkhov:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/the-diver.css">
+    <meta
+      name="description"
+      content="This page is dedicated to a dear friend. This is a tribute and a token of thanks for being a mentor to me in my life. When all seems crazy and I feel lost I know that the Diver will be there to pull me out of the deep. Thank you for being a great friend Dallas!"
+    />
+    <meta name="author" content="Collin Maassen" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;1,400;1,500&family=Volkhov:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/the-diver.css" />
     <script src="../scripts/getdates.js" defer></script>
     <script src="scripts/the-diver.js"></script>
-</head>
-<body>
+    <script src="scripts/carousel.js" defer></script>
+  </head>
+  <body>
     <header>
-        <img src="images/old-diver.webp" alt="Old Style dive suit with diver in the water. ">
-        <h1>The Man In The Tank</h1>
-        <nav>
-            <a href="#">Home</a>
-            <a href="certificates.html">Scuba Classes</a>
-            <a href="pois.html">Dive Sites</a>
-        </nav>
+      <img
+        src="images/old-diver.webp"
+        alt="Old Style dive suit with diver in the water. "
+      />
+      <h1>The Man In The Tank</h1>
+      <nav>
+        <a href="#">Home</a>
+        <a href="certificates.html">Scuba Classes</a>
+        <a href="pois.html">Dive Sites</a>
+      </nav>
     </header>
     <main>
-        <div class="carousel">
-            <img src="" alt="Placeholder">
-            <img src="" alt="Placeholder">
-            <img src="" alt="Placeholder">
-            <img src="" alt="Placeholder">
-            <img src="" alt="Placeholder">
-            <img src="" alt="Placeholder">
-        </div>
-        <h2>The Tanks At Scheels</h2>
-        <p>If you have ever been to the new Scheels store down in Chandler you know it is a place full of wonder. It is impressive that they have a functional ferris wheel inside the store. This along with the many other amazing displays. The one that stands out to me is the three pillar 16,000 gallon tank. If you are lucky to visit on a cleaning day you might question who the man is that is under the suit?</p>
-        <aside>
-            <img src="images/tank-small.webp" alt="Tank at Chandler Arizona Scheels. Image borrowed from ICM website at https://icm-corp.com/commercial-aquarium/scheels-sports-aquarium/">
-        </aside>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3334.6172116409975!2d-111.9004229!3d33.302676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b017aac18fa25%3A0x12879b5a5bf45081!2sSCHEELS!5e0!3m2!1sen!2sus!4v1734062740413!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div class="carousel">
+      </div>
+      <h2>The Tanks At Scheels</h2>
+      <p>
+        If you have ever been to the new Scheels store down in Chandler you know
+        it is a place full of wonder. It is impressive that they have a
+        functional ferris wheel inside the store. This along with the many other
+        amazing displays. The one that stands out to me is the three pillar
+        16,000 gallon tank. If you are lucky to visit on a cleaning day you
+        might question who the man is that is under the suit?
+      </p>
+      <aside>
+        <img
+          src="images/tank-small.webp"
+          alt="Tank at Chandler Arizona Scheels. Image borrowed from ICM website at https://icm-corp.com/commercial-aquarium/scheels-sports-aquarium/"
+        />
+      </aside>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3334.6172116409975!2d-111.9004229!3d33.302676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b017aac18fa25%3A0x12879b5a5bf45081!2sSCHEELS!5e0!3m2!1sen!2sus!4v1734062740413!5m2!1sen!2sus"
+        width="600"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
 
-        <img src="" alt="Dallas' Picture of Choice">
-        <p>This is the man beneath the mask, Dallas. I like to introduce him as my friend but honestly he is so much more than that. Dallas has been my friend, my confidant, and honestly a pillar of his community. He is a skilled developer that likes to spend time with his family and friends.
-        <br>
-        <br>One of the greatest things to admire about this diver is that he is selfless. He continues to help those that are in his life. Some of the things he has done is working within his local church to develop programs to assist with tracking certain tasks. The program's end goal is to help his church community see the members that could potentially need assistance or a just a friendly face. He has been and continues to be a great mentor for those around him, always pushing people to strive for the best that they can be and helping them along the way.
-        <br><br>
-        Dallas likes to explore the unkown, thus why he sought to get his dive certification. He likes to seeek the fun that is to be held in life. This passion for exploration is what led to him being "The Man In The Tank." Bein the man that Dallas is, he encourages all to explore and find your own passions, life is short and he wants all those that come into his life to live it to the fullest.
-        That is why he reccomends if you're interested in obtaining your own scuba certifications to visit the <a href="certificates.html">Scuba Classes</a> site.</p>
+      <img src="" alt="Dallas' Picture of Choice" />
+      <p>
+        This is the man beneath the mask, Dallas. I like to introduce him as my
+        friend but honestly he is so much more than that. Dallas has been my
+        friend, my confidant, and honestly a pillar of his community. He is a
+        skilled developer that likes to spend time with his family and friends.
+        <br />
+        <br />One of the greatest things to admire about this diver is that he
+        is selfless. He continues to help those that are in his life. Some of
+        the things he has done is working within his local church to develop
+        programs to assist with tracking certain tasks. The program's end goal
+        is to help his church community see the members that could potentially
+        need assistance or a just a friendly face. He has been and continues to
+        be a great mentor for those around him, always pushing people to strive
+        for the best that they can be and helping them along the way.
+        <br /><br />
+        Dallas likes to explore the unkown, thus why he sought to get his dive
+        certification. He likes to seeek the fun that is to be held in life.
+        This passion for exploration is what led to him being "The Man In The
+        Tank." Bein the man that Dallas is, he encourages all to explore and
+        find your own passions, life is short and he wants all those that come
+        into his life to live it to the fullest. That is why he reccomends if
+        you're interested in obtaining your own scuba certifications to visit
+        the <a href="certificates.html">Scuba Classes</a> site.
+      </p>
     </main>
     <footer>
-        <p>© <span id="currentyear"></span> ♌ Collin Maassen ☯ USA, Arizona</p>
-        <p><span id="lastModified"></span></p>
-        <div class="social-links">
-            <nav>
-              <a href="https://www.instagram.com/" class="icon">
-                <img src="images/instagram.svg" alt="Instagram">
-              </a>
-              <a href="https://www.facebook.com/" class="icon">
-                <img src="images/facebook.svg" alt="Facebook">
-              </a>
-              <a href="https://x.com/?lang=en" class="icon">
-                <img src="images/twitter.svg" alt="Twitter">
-              </a>
-            </nav>
-          </div>
+      <p>© <span id="currentyear"></span> ♌ Collin Maassen ☯ USA, Arizona</p>
+      <p><span id="lastModified"></span></p>
+      <div class="social-links">
+        <nav>
+          <a href="https://www.instagram.com/" class="icon">
+            <img src="images/instagram.svg" alt="Instagram" />
+          </a>
+          <a href="https://www.facebook.com/" class="icon">
+            <img src="images/facebook.svg" alt="Facebook" />
+          </a>
+          <a href="https://x.com/?lang=en" class="icon">
+            <img src="images/twitter.svg" alt="Twitter" />
+          </a>
+        </nav>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
