--- a/project/certificates.html
+++ b/project/certificates.html
@@ -12,16 +12,10 @@
     <link rel="stylesheet" href="styles/the-diver.css">
     <script src="../scripts/getdates.js" defer></script>
     <script src="scripts/certificates.js"></script>
+    <script src="scripts/nav.js"></script>
 </head>
 <body>
     <header>
-        <img src="images/old-diver.webp" alt="Old Style dive suit with diver in the water. ">
-        <h1>Scuba Certification Courses</h1>
-        <nav>
-            <a href="the-diver.html">Home</a>
-            <a href="#">Scuba Classes</a>
-            <a href="pois.html">Dive Sites</a>
-        </nav>
     </header>
     <main>
         <section class="cert1">
