--- a/project/pois.html
+++ b/project/pois.html
@@ -12,16 +12,10 @@
     <link rel="stylesheet" href="styles/the-diver.css">
     <script src="../scripts/getdates.js" defer></script>
     <script src="scripts/pois.js"></script>
+    <script src="scripts/nav.js"></script>
 </head>
 <body>
     <header>
-        <img src="images/old-diver.webp" alt="Old Style dive suit with diver in the water. ">
-        <h1>The Man In The Tank</h1>
-        <nav>
-            <a href="the-diver.html">Home</a>
-            <a href="certificates.html">Scuba Classes</a>
-            <a href="#">Dive Sites</a>
-        </nav>
     </header>
     <main>
         <img src="" alt="Image of Lake Havasu">
