--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -9,20 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;1,400;1,500&family=Volkhov:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/siteplan.css">
+    <link rel="stylesheet" href="styles/the-diver.css">
     <script src="scripts/siteplan.js" defer></script>
     <script src="../scripts/getdates.js" defer></script>
-
+    <script src="scripts/nav.js"></script>
 </head>
 <body>
     <header>
-        <h1>Site Plan Page</h1>
-        <nav> 
-            <a href="#">Home</a>
-            <a href="#">Diver Site</a>
-            <a href="#">Classes</a>
-            <a href="#"> Diving Points of Interest</a>
-        </nav>
     </header>
 
     <main>
