--- a/project/the-diver.html
+++ b/project/the-diver.html
@@ -19,19 +19,10 @@
     <script src="../scripts/getdates.js" defer></script>
     <script src="scripts/the-diver.js"></script>
     <script src="scripts/carousel.js" defer></script>
+    <script src="scripts/nav.js"></script>
   </head>
-  <body>
+  <body class="the-diver">
     <header>
-      <img
-        src="images/old-diver.webp"
-        alt="Old Style dive suit with diver in the water. "
-      />
-      <h1>The Man In The Tank</h1>
-      <nav>
-        <a href="#">Home</a>
-        <a href="certificates.html">Scuba Classes</a>
-        <a href="pois.html">Dive Sites</a>
-      </nav>
     </header>
     <main>
       <div class="carousel">
