--- a/project/pois.html
+++ b/project/pois.html
@@ -20,6 +20,7 @@
     <main>
         <img src="" alt="Image of Lake Havasu">
         <div class="lake-havasu">
+            <h2>Dive Site 5, Lake Havasu</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam corporis dolorem aut itaque sed exercitationem consequuntur quaerat modi ratione non corrupti, praesentium beatae blanditiis sint alias est nisi neque! Rem.
             </p>
@@ -29,14 +30,58 @@
             </aside>
         </div>
         <div class="lake-pleasant">
+            <h2>Cyborg Pirate, Lake Pleasant</h2>
             <img src="" alt="An image of Lake Pleasant">
             <aside>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4738.236721049454!2d-112.26475542173245!3d33.85143283747254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86e3f301cfe72eff%3A0x6f38366d99b84e46!2sCyborg%20Pirate!5e1!3m2!1sen!2sus!4v1734138088816!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </aside>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum nam pariatur deleniti. Nisi neque dolores optio sit ab alias deleniti eveniet facere! Deleniti esse quod voluptatum aspernatur? Possimus, obcaecati cupiditate.</p>
         </div>
-        <div class="lake mohave"></div>
-        
+        <div class="lake mohave">
+            <h2>Cabinsite Cove, Lake Mohave</h2>
+            <img src="" alt="An image of Lake Mohave Cabinsite Cove">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae suscipit maxime officiis alias? Esse saepe enim magni sint consectetur doloremque error, aperiam fugiat tempora minima labore excepturi quam nihil quae!</p>
+            <aside>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18003.105845184717!2d-114.60265662422817!3d35.24339523983994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80ce5ce33205bf25%3A0xfe143127192333c!2sCabinsite%20Cove!5e1!3m2!1sen!2sus!4v1734139814294!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </aside>
+        </div>
+
+        <form>
+            <label for="dive-sites">Reccomend a Dive Site</label>
+            <textarea name="dive-sites" id="dive-sites" rows="6" placeholder="Enter Reccomended Site Name and Address Here" required></textarea>
+
+            <fieldset>
+                <legend>Which Features Makes This a Great Dive? <br>(Check all that apply)</legend>
+                <label>
+                    <input type="checkbox" name="features" id="feature1"> Excellent Visibility 
+                </label>
+                <label>
+                    <input type="checkbox" name="features" id="feature2"> Rocking Fish 🐠
+                </label>
+                <label>
+                    <input type="checkbox" name="features" id="feature3"> Rental Equipment Available 🤿
+                </label>
+                <label>
+                    <input type="checkbox" name="features" id="feature4"> Staged Points of Interest 📸
+                </label>
+                <label>
+                    <input type="checkbox" name="features" id="feature5"> Great Water Surface Temp
+                </label>
+                <label>
+                    <input type="checkbox" name="features" id="feature6"> Low Traffic on The Water 🌊
+                </label>
+
+                <label for="favorite-part">What Is Your Favorite Part of This Dive Spot?</label>
+                <input type="text" name="favorite-part" id="favorite-part" placeholder="Enter Favorite Part of Dive Here">
+
+                <label for="username">Sign Your Name (Optional)</label>
+
+                <input type="submit" value="Send Your Reccomendation!">
+        </form>
     </main>
+    <footer>
+        <p>© <span id="currentyear"></span> ♌ Collin Maassen ☯ USA, Arizona</p>
+        <p><span id="lastModified"></span></p>
+    </footer>
 </body>
 </html>
