--- a/project/certificates.html
+++ b/project/certificates.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;1,400;1,500&family=Volkhov:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/the-diver.css">
     <script src="../scripts/getdates.js" defer></script>
-    <script src="scripts/certificates.js"></script>
     <script src="scripts/nav.js"></script>
 </head>
 <body>
@@ -19,57 +18,143 @@
     </header>
     <main>
         <section class="cert1">
-            <h2><a href="https://phoenix.diventures.com/courses/open-water-diver-scuba-certification-course">Scuba Place 1 Info</a></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga qui necessitatibus eveniet doloremque blanditiis atque, incidunt itaque reiciendis recusandae porro ipsa. Sed odio impedit sunt quia voluptas temporibus quasi, perspiciatis sint distinctio excepturi harum pariatur? Perferendis magni repellendus fugiat, aliquid tenetur, perspiciatis doloribus, enim accusamus cupiditate laborum at debitis? Consequuntur perspiciatis neque eaque voluptatibus quibusdam iure accusamus provident officiis dolor, impedit placeat similique nihil incidunt sit quia delectus quisquam beatae fugiat consequatur. Officiis culpa a corrupti voluptatem nemo quo consequatur tempore, sunt incidunt suscipit est aperiam delectus quibusdam possimus, nulla quia. Possimus dolores corrupti sapiente cupiditate modi doloribus officiis perspiciatis, esse commodi dolore laborum velit consequuntur nobis minima nam neque voluptatem incidunt facilis est architecto saepe aut? Corrupti itaque, natus doloribus blanditiis beatae numquam harum distinctio labore tempora. Animi praesentium explicabo reprehenderit odit nesciunt hic dolorum porro culpa eaque obcaecati possimus quis quia, perferendis dignissimos quos velit inventore laboriosam doloribus?</p>
+            <h2><a href="https://phoenix.diventures.com/courses/open-water-diver-scuba-certification-course">Diventures</a></h2>
+            <p>This diving school offers a variety of certification types. They offer a wide range of dates and times to allow for all to be able to attend and achieve their goals of becoming a scuba diver! <br>They also provide options for help planning trips to go diving. They truly are an all around great place to suit your diving needs. With options to rent or purchase your own epquipment they will set each diver up to conquer the open water.</p>
             <div class="cert-table">
-                <thead>
-                    <tr>
-                        <th colspan="3">Place 1</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>price</td>
-                        <td>dates</td>
-                        <td>equipment provided</td>
-                    </tr>
-                </tbody>
+                <table>
+                    <thead>
+                        <tr>
+                            <th colspan="6">Diventures Courses</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>Dates</th>
+                            <th>Time</th>
+                            <th>Class Room</th>
+                            <th>Dive Practice</th>
+                            <th>Price</th>
+                            <th>Equipment Provided</th>
+                        </tr>
+                        <tr>
+                            <td>Sat/Sun Jan 11/12th, 2025</td>
+                            <td>8:30 am - 1:30pm</td>
+                            <td> </td>
+                            <td>X</td>
+                            <td>$75</td>
+                            <td>No (Rentals Available)</td>
+                        </tr>
+                        <tr>
+                            <td>Sat/Sun Jan 11/12th, 2025</td>
+                            <td>9:00 am - 5:00pm</td>
+                            <td>X</td>
+                            <td> </td>
+                            <td>$500</td>
+                            <td>No (Rentals Available)</td>
+                        </tr>
+                        <tr>
+                            <td>Sat/Sun Jan 25/26th, 2025</td>
+                            <td>9:00 am - 5:00pm</td>
+                            <td>X</td>
+                            <td> </td>
+                            <td>$500</td>
+                            <td>No (Rentals Available)</td>
+                        </tr>
+                        <tr>
+                            <td>Sat/Sun Feb 1st/2nd, 2025</td>
+                            <td>8:30 am - 1:30pm</td>
+                            <td> </td>
+                            <td>X</td>
+                            <td>$75</td>
+                            <td>No (Rentals Available)</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </section>
         <section class="cert2">
-            <h2><a href="">Scuba Place 2 Info</a></h2>
+            <h2><a href="https://live4divin.com/open-water-diver-certification-beginner-">Phoenix Scuba</a></h2>
             <div class="cert-table">
-                <thead>
-                    <tr>
-                        <th colspan="3">Place 1</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>price</td>
-                        <td>dates</td>
-                        <td>equipment provided</td>
-                    </tr>
-                </tbody>
+                <table>
+                    <thead>
+                        <tr>
+                            <th colspan="6">Phoenix Scuba Courses</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>Dates</th>
+                            <th>Time</th>
+                            <th>Class Room</th>
+                            <th>Dive Practice</th>
+                            <th>Price</th>
+                            <th>Equipment Provided</th>
+                        </tr>
+                        <tr>
+                            <td>Mon Jan 13th, 2025 <br>Tue Jan 14th, 2025 <br>Wed Jan 15th, 2025</td>
+                            <td>6:00 pm - 9:00 pm <br></td>
+                            <td>X <br> <br> </td>
+                            <td> <br>X <br>X </td>
+                            <td>$399.00</td>
+                            <td>No (Rentals Available)</td>
+                        </tr>
+                        <tr>
+                            <td>Sat Feb 1st, 2025 <br>Sat Feb 1st, 2025 <br>Sun Feb 2nd, 2025</td>
+                            <td>8:00 am - 12:00 pm <br>1:00 pm - 5:00 pm <br>8:00 am - 12:00 pm</td>
+                            <td>X <br> <br> </td>
+                            <td> <br>X <br>X </td>
+                            <td>$399.00</td>
+                            <td>No (Rentals Available)</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <img src="images/turtle.webp" alt="Man scuba diving taking picture of sea turtle">
             </div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam enim, odit laborum impedit quis unde ipsum explicabo ducimus recusandae aperiam veritatis iure, fugit fugiat dolore inventore provident, ut eligendi alias doloribus repellendus! Vero aperiam quidem cupiditate a ipsa atque doloremque incidunt officiis cum aut porro enim vel qui ipsam, magni quisquam, consequuntur voluptatum reprehenderit. Optio neque deserunt laborum debitis vel ad quos eaque dolores corporis exercitationem repellat veniam tempore illum, expedita incidunt sint voluptatem. Quo, quibusdam molestiae pariatur suscipit est error cumque? Quidem fugiat iste asperiores amet ipsa exercitationem omnis quaerat labore ex et soluta temporibus, recusandae nulla dolores iusto.</p>
+            <p>This scub diving course offers training with experience for all ages 10 and up. They strive to teach everyone that the scary things of diving are not so frightful as long as you understand them. At Phoenix Scuba they offer classes for different experience levels. Giving you the training that you are seeking. <br><br>Another amazing thing that is offered here with Phoenix Scuba is the chance to go on a scuba trip of a lifetime. These trips offer all inclusive stays with plans for dives throughout a week long stay. This will give you all those amazing stories for you to be the talk of the office and/ or school. </p>
         </section>
         <section class="cert3">
-            <h2><a href="">Scuba Place 3 Info</a></h2>
+            <h2><a href="https://divearizona.com/courses/open-water-course">Dive Arizona</a></h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga qui necessitatibus eveniet doloremque blanditiis atque, incidunt itaque reiciendis recusandae porro ipsa. Sed odio impedit sunt quia voluptas temporibus quasi, perspiciatis sint distinctio excepturi harum pariatur? Perferendis magni repellendus fugiat, aliquid tenetur, perspiciatis doloribus, enim accusamus cupiditate laborum at debitis? Consequuntur perspiciatis neque eaque voluptatibus quibusdam iure accusamus provident officiis dolor, impedit placeat similique nihil incidunt sit quia delectus quisquam beatae fugiat consequatur. Officiis culpa a corrupti voluptatem nemo quo consequatur tempore, sunt incidunt suscipit est aperiam delectus quibusdam possimus, nulla quia. Possimus dolores corrupti sapiente cupiditate modi doloribus officiis perspiciatis, esse commodi dolore laborum velit consequuntur nobis minima nam neque voluptatem incidunt facilis est architecto saepe aut? Corrupti itaque, natus doloribus blanditiis beatae numquam harum distinctio labore tempora. Animi praesentium explicabo reprehenderit odit nesciunt hic dolorum porro culpa eaque obcaecati possimus quis quia, perferendis dignissimos quos velit inventore laboriosam doloribus?</p>
             <div class="cert-table">
-                <thead>
-                    <tr>
-                        <th colspan="3">Place 1</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>price</td>
-                        <td>dates</td>
-                        <td>equipment provided</td>
-                    </tr>
-                </tbody>
+                <table>
+                    <thead>
+                        <tr>
+                            <th colspan="4">Dive Arizona Courses</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>Course</th>
+                            <th>Price</th>
+                            <th>Equipment Provided</th>
+                            <th>Dates</th>
+                        </tr>
+                        <tr>
+                            <td>Open Water Dive</td>
+                            <td>$429.00</td>
+                            <td>Included in Course Price</td>
+                            <td>Call For More Information</td>
+
+                        </tr>
+                        <tr>
+                            <td>Wreck Dive</td>
+                            <td>$169.00</td>
+                            <td>No (Rentals Available) </td>
+                            <td>Call For More Information
+                            <br>Prequisites Required</td>
+                        </tr>
+                        <tr>
+                            <td>Rescue Diver</td>
+                            <td>$279.00</td>
+                            <td>No (Rentals Available) </td>
+                            <td>Call For More Information
+                            <br>Prequisites Required</td>
+                        </tr>
+                        <tr>
+                            <th colspan="4"><a href="https://divearizona.com/courses">For Other Course Info Click Here</a></th>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </section>
     </main>
